Check for void response in nested parameterized types (#1740)
