# testsuite/data/src/main/java/io/smallrye/openapi/testdata/java/panache/reactiveclient/ProductResource.java
@@ -4,8 +4,10 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 
 import jakarta.enterprise.context.RequestScoped;
+import jakarta.ws.rs.DELETE;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
@@ -14,6 +16,9 @@ import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
+import org.jboss.resteasy.reactive.RestResponse;
+
+import io.smallrye.mutiny.Uni;
 
 @Path("/product")
 @RequestScoped
@@ -36,4 +41,12 @@ public class ProductResource {
 
         return Response.ok(product).build();
     }
+
+    @DELETE
+    @Path("/{id}")
+    @Produces({ "application/json;charset=utf-8" })
+    public Uni<RestResponse<Void>> deleteProduct(@PathParam("id") String id) {
+        return null;
+    }
+
 }
