# testsuite/data/src/test/resources/io/smallrye/openapi/testdata/ignore.synthetic-classes-interfaces.json
@@ -206,6 +206,23 @@
           }
         }
       }
+    },
+    "/product/{id}" : {
+      "delete" : {
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "204" : {
+            "description" : "No Content"
+          }
+        }
+      }
     }
   },
   "components" : {
